Adicione um Paragrafo
adicionei mais um paragrafo

--- a/Site-exemplo/index.html
+++ b/Site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá Mundo</h1>
     <hr>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nihil a nam tempore maxime nulla repellendus. Reprehenderit rem harum veniam dolorem possimus accusamus eius consequatur, dolores nisi illum, unde voluptates odit!</p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Facilis a aperiam at voluptate, ducimus ut eos beatae necessitatibus similique amet aliquid iusto reprehenderit esse maiores earum reiciendis quod adipisci accusamus.</p>
 </body>
 </html>
